<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.constraintlayout.widget.ConstraintLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?attr/colorSurface"
		android:padding="@dimen/spacing_20">

		<com.google.android.material.appbar.AppBarLayout
			android:id="@+id/topAppBarLayout"
			android:layout_width="match_parent"
			android:layout_height="@dimen/height_65"
			app:layout_constraintTop_toTopOf="parent">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<TextView
					android:id="@+id/screenName"
					style="@style/TextAppearance.AppCompat.Display1"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginStart="@dimen/spacing_15"
					android:gravity="center"
					android:text="@string/add_account"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>


		</com.google.android.material.appbar.AppBarLayout>

		<androidx.cardview.widget.CardView
			android:id="@+id/account_layout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="@dimen/spacing_15"
			app:cardCornerRadius="@dimen/spacing_20"
			app:layout_constraintTop_toBottomOf="@id/topAppBarLayout">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:padding="@dimen/spacing_20">

				<TextView
					android:id="@+id/accountName"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintBottom_toTopOf="@id/balanceTitle"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:text="@string/account_dots" />

				<TextView
					android:id="@+id/numberTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/spacing_20"
					android:layout_marginStart="@dimen/spacing_10"
					android:text="@string/account_dots"
					app:layout_constraintBottom_toBottomOf="@id/number"
					app:layout_constraintEnd_toStartOf="@id/number"
					app:layout_constraintTop_toTopOf="@id/number" />

				<TextView
					android:id="@+id/number"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_10"
					app:layout_constraintBottom_toBottomOf="@id/accountName"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintTop_toTopOf="@id/accountName"
					tools:text="@string/account_dots" />

				<TextView
					android:id="@+id/balanceTitle"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:text="@string/balance"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toStartOf="@id/balanceTitle"
					app:layout_constraintTop_toBottomOf="@id/accountName"
					tools:text="@string/account_dots" />

				<TextView
					android:id="@+id/balance"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginStart="@dimen/spacing_10"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/balanceTitle"
					app:layout_constraintTop_toBottomOf="@id/accountName"
					tools:text="@string/account_dots" />


			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.cardview.widget.CardView>

		<TextView
			android:id="@+id/colorTitle"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_10"
			android:text="@string/colorTitle"
			app:layout_constraintEnd_toStartOf="@id/colorChosen"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/account_layout" />

		<TextView
			android:id="@+id/colorChosen"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			app:layout_constraintBottom_toBottomOf="@id/colorTitle"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toEndOf="@id/colorTitle"
			app:layout_constraintTop_toTopOf="@id/colorTitle" />

		<Button
			android:id="@+id/button_color"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_10"
			android:text="@string/choose_color"
			app:layout_constraintTop_toBottomOf="@id/colorTitle" />

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/cardNameLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_10"
			android:hint="@string/cardName"
			app:layout_constraintTop_toBottomOf="@id/button_color">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/cardName"
				android:layout_width="match_parent"
				android:layout_height="wrap_content" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/cardNumberLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_10"
			android:hint="@string/last_digits"
			app:layout_constraintTop_toBottomOf="@id/cardNameLayout">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/cardNumber"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="number"
				android:maxLength="4" />
		</com.google.android.material.textfield.TextInputLayout>

		<com.google.android.material.textfield.TextInputLayout
			android:id="@+id/cardBalanceLayout"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_10"
			android:hint="@string/balance"
			app:layout_constraintTop_toBottomOf="@id/cardNumberLayout">

			<com.google.android.material.textfield.TextInputEditText
				android:id="@+id/cardBalance"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:inputType="numberDecimal|number" />
		</com.google.android.material.textfield.TextInputLayout>

		<CheckBox
			android:id="@+id/isSharedCheckBox"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_10"
			android:text="@string/isAccountShared"
			app:layout_constraintTop_toBottomOf="@id/cardBalanceLayout" />

		<TextView
			android:id="@+id/usersText"
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:layout_margin="20dp"
			android:text="@string/users"
			android:visibility="gone"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@id/isSharedCheckBox" />

		<HorizontalScrollView
			android:id="@+id/usersScroll"
			android:layout_width="match_parent"
			android:layout_height="50dp"
			android:visibility="gone"
			app:layout_constraintTop_toBottomOf="@id/usersText">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="wrap_content"
				android:layout_height="match_parent">

				<com.google.android.material.chip.ChipGroup
					android:id="@+id/users_chip_group"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_gravity="bottom"
					app:chipSpacingHorizontal="4dp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toEndOf="@id/addChip"
					app:layout_constraintTop_toTopOf="parent" />


				<com.google.android.material.chip.Chip
					android:id="@+id/addChip"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:closeIconEnabled="false"
					android:text="@string/plus_sign"
					app:chipBackgroundColor="?attr/colorSecondary"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintStart_toStartOf="parent" />

			</androidx.constraintlayout.widget.ConstraintLayout>

		</HorizontalScrollView>

		<Button
			android:id="@+id/button_save"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/spacing_10"
			android:backgroundTint="?attr/colorSecondary"
			android:text="@string/save"
			app:layout_constraintTop_toBottomOf="@id/usersScroll" />

	</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>